package fr.efreifive.manageplayer.dto;

import java.util.UUID;

public record TeamDto(UUID id, String name) {
}
